@@ -1,6 +1,6 @@
 Package: Matrix
-Version: 0.95-8
-Date: 2005-05-10
+Version: 0.95-9
+Date: 2005-05-11
 Title: A Matrix package for R
 Author: Douglas Bates <bates@stat.wisc.edu> and Martin Maechler <maechler@stat.math.ethz.ch>
 Maintainer: Douglas Bates <bates@stat.wisc.edu>
@@ -14,4 +14,4 @@ License: GPL version 2 or later.
  This R package includes code from the LDL and Metis packages,
  which are covered by separate copyrights.  See the file Copyrights for
  details.
-Packaged: Tue May 10 09:40:36 2005; bates
+Packaged: Wed May 11 07:41:01 2005; bates
